--- a/adonis-api/package.json
+++ b/adonis-api/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "adonisjs",
@@ -25,12 +26,14 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "cep-promise": "^3.0.9",
-    "cpf-cnpj-validator": "^1.0.1",
+    "cpf-cnpj-validator": "^1.0.2",
     "mysql": "^2.18.1",
     "pg": "^8.2.1",
     "sqlite3": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "autoload": {
     "App": "./app"
   }
